--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "firebase": "^11.1.0",
     "framer-motion": "^11.18.0",
+    "locomotive-scroll": "^4.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.0",
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
     "swiper": "^11.2.0"
